--- a/index.html
+++ b/index.html
@@ -10,22 +10,15 @@
 				<h1 class = "header_text">Wanted ZA</h1>
 			</div>
 			<div class="gif_container">
-				<img src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWhlZm51Y2JneWUxZ3QwZHRwenJodWpjcjFiYmhzN29reG5lYXo0NSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xTiTnmdbzmOPolQS2Y/giphy.gif" alt="Cute animated illustration">
+				<img src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExOG8wOHczMGY4MDJodXp2YzBhemdnZzlpdzM1MnNsdGVmczM5b3FvayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l41YoNv64S2N0Iifm/giphy.gif">
 			</div>
 			<div class = "buttons">
-				<button class="btn" id = "without a doubtButton" onclick="nextPage()">Without a doubt</button>
-				<button class="btn" id="yesButton" onmouseover="moveButton()" onclick="moveButton()">Yes</button>
+				<button class="btn" id = "SIGN UP" onclick="nextPage()">SIGN UP</button>
 	<script>
 		function nextPage() {
-			window.location.href = "without a doubt.html";
+			window.location.href = "SIGN UP";
 		}
 
-functionn moveButton() {
-	var x = Math.random() * (window.innerWidth - document.getElementById('yesButton').offsetWidth) - 95;
-	var y = Math.random() * (window.innerHeight - document.getElementById('yesButton').offsetHeight) - 48;
-	document.getElementById('yesButton').style.left = '${x}px';
-	document.getElementById('yesButton').style.top = '${y}px';
-}
 	</script>
 			</div>
 		</div>
