--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<link rel="stylesheet" href="./styles.css">
+<html >
+<head>
+<meta name =“viewport” content=“width=device-width, initial-scale=1.0”>
+<title>Most Wanted ZA</title>
+<link rel=“stylesheet” href=“style.css”>
+</head>
+<body>
+<div class =“home”>
+<nav>
+<img src=“logo.png”
+<ul>
+<li><a href =“”>Dashboard</a></li>
+<li><a href =“”>Following</a></li>
+<li><a href =“”>Cases Cards</a></li>
+<li><a href =“”>Suspect Profiling</a></li>
+<li><a href =“”>Missing Persons Grid</a></li>
+</ul>
+</nav>
+<h1>Wanted<br>ZA</h1>
+<button type=“button”>Join The Search</button>
 
-	</head>
-	<body>
-		<div class="container">
-			<div >
-				<h1 class = "header_text">Wanted ZA</h1>
-			</div>
-			<div class="gif_container">
-				<img src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExOG8wOHczMGY4MDJodXp2YzBhemdnZzlpdzM1MnNsdGVmczM5b3FvayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l41YoNv64S2N0Iifm/giphy.gif">
-			</div>
-			<div class = "buttons">
-				<button class="btn" id = "SIGN UP" onclick="nextPage()">SIGN UP</button>
-	<script>
-		function nextPage() {
-			window.location.href = "SIGN UP";
-		}
 
-	</script>
-			</div>
-		</div>
 
-	</body>
+</div>
+
+
+
+
+</body>
 </html>
