--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name =“viewport” content=“width=device-width, initial-scale=1.0”>
 <title>Most Wanted ZA</title>
-<link rel=“stylesheet” href=“style.css”>
+<link href=“style.css” rel=“stylesheet”>
 </head>
 <body>
 <div class =“home”>
